--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   },
   "dependencies": {
     "next": "12.0.7",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react": "18.0.0-rc.0-next-fe419346d-20220105",
+    "react-dom": "18.0.0-rc.0-next-fe419346d-20220105",
+    "swr": "1.1.2"
   },
   "devDependencies": {
     "@types/node": "17.0.8",
